tests/data/full-system/setup;create vm/ex/etc/iptables/rules.v4
*nat
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
-A INPUT -j KIB_INPUT
-A OUTPUT -j KIB_OUTPUT
-A POSTROUTING -j KIB_POSTROUTING
-A PREROUTING -j KIB_PREROUTING
-A KIB_POSTROUTING -s 10.0.0.0/16 -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -j KIB_INPUT
-A FORWARD -j KIB_FORWARD
-A OUTPUT -j KIB_OUTPUT
-A KIB_FORWARD -i eth0 -o kipubr -j ACCEPT
-A KIB_FORWARD -i kipubr -o eth0 -j ACCEPT
COMMIT
